--- a/Anhängerverleih.css
+++ b/Anhängerverleih.css
@@ -3,7 +3,7 @@
 }
 
 .u-section-1 .u-sheet-1 {
-  min-height: 1066px;
+  min-height: 1159px;
 }
 
 .u-section-1 .u-shape-1 {
@@ -54,7 +54,7 @@
 
 .u-section-1 .u-group-1 {
   width: 683px;
-  min-height: 406px;
+  min-height: 499px;
   height: auto;
   --animation-custom_in-translate_x: 0px;
   --animation-custom_in-translate_y: 300px;
@@ -88,7 +88,9 @@
 }
 
 .u-section-1 .u-text-3 {
-  margin: -64px 13px 0 43px;
+  font-size: 1.5rem;
+  line-height: 1.1;
+  margin: -81px 40px 0;
 }
 
 .u-section-1 .u-icon-1 {
@@ -96,263 +98,204 @@
 }
 
 .u-section-1 .u-text-4 {
-  margin: -56px 13px 0 285px;
+  font-size: 1.5rem;
+  margin: 25px 406px 0 40px;
 }
 
 .u-section-1 .u-icon-2 {
-  font-size: 2.2223em;
+  font-size: 1.6667em;
 }
 
 .u-section-1 .u-text-5 {
-  margin: 24px 13px -66px 285px;
+  font-size: 1.5rem;
+  margin: -43px 46px 0 337px;
 }
 
 .u-section-1 .u-icon-3 {
-  font-size: 2.2223em;
+  font-size: 1.1667em;
 }
 
 @media (max-width: 1199px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 100vh;
-  }
-
-  .u-section-1 .u-shape-1 {
-    height: 456px;
-  }
-
-  .u-section-1 .u-image-1 {
-    width: 781px;
-    margin-top: -155px;
-    margin-right: 29px;
-    margin-left: auto;
-  }
-
-  .u-section-1 .u-shape-2 {
-    width: 281px;
+    min-height: 1120px;
   }
 
   .u-section-1 .u-image-2 {
-    width: 788px;
-    height: 596px;
-    margin-left: auto;
+    width: 1020px;
+    height: 493px;
+    margin-left: 0;
   }
 
   .u-section-1 .u-group-1 {
-    width: 464px;
+    min-height: 442px;
     margin-top: -79px;
-    margin-right: 139px;
-    margin-bottom: 49px;
     height: auto;
-  }
-
-  .u-section-1 .u-image-3 {
-    height: 335px;
-    margin-top: -100px;
-    margin-right: -62px;
   }
 
   .u-section-1 .u-text-1 {
     font-size: 3.125rem;
-    width: auto;
-    margin-top: -128px;
-    margin-left: 28px;
-    margin-right: 28px;
-  }
-
-  .u-section-1 .u-text-2 {
-    width: auto;
-    margin-top: 8px;
-    margin-right: 0;
-    margin-left: 27px;
-  }
-
-  .u-section-1 .u-text-3 {
-    width: auto;
-    margin-top: 30px;
-    margin-left: 27px;
-  }
-
-  .u-section-1 .u-text-4 {
-    width: auto;
-    margin-top: -60px;
-    margin-right: 28px;
-    margin-left: auto;
   }
 }
 
 @media (max-width: 991px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 870px;
+    min-height: 975px;
   }
 
   .u-section-1 .u-image-1 {
-    height: 269px;
-    margin-top: -272px;
-    margin-right: initial;
-    margin-left: initial;
-    width: auto;
-  }
-
-  .u-section-1 .u-shape-2 {
-    height: 335px;
-    width: 230px;
-    margin-top: -506px;
+    margin-left: 49px;
   }
 
   .u-section-1 .u-image-2 {
-    width: 600px;
-    height: 401px;
-    margin-top: -456px;
+    width: 720px;
+    height: 348px;
   }
 
   .u-section-1 .u-group-1 {
-    margin-top: -95px;
-    margin-right: 19px;
-    margin-bottom: 47px;
+    margin-top: 66px;
+    margin-right: 37px;
+  }
+
+  .u-section-1 .u-text-4 {
+    width: auto;
+    margin-top: 21px;
+    margin-right: 412px;
+    margin-left: 34px;
+  }
+
+  .u-section-1 .u-text-5 {
+    width: auto;
+    margin-top: -48px;
+    margin-right: 55px;
+    margin-left: 328px;
   }
 }
 
 @media (max-width: 767px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 890px;
-  }
-
-  .u-section-1 .u-shape-1 {
-    height: 263px;
-    margin-top: 76px;
+    min-height: 827px;
   }
 
   .u-section-1 .u-image-1 {
-    margin-top: 0;
-    width: auto;
-    margin-right: initial;
-    margin-left: initial;
+    width: 540px;
+    height: 249px;
+    margin-left: 0;
   }
 
   .u-section-1 .u-shape-2 {
-    height: 228px;
-    width: 210px;
-    margin-top: -319px;
+    margin-top: -580px;
   }
 
   .u-section-1 .u-image-2 {
-    width: 464px;
-    height: 310px;
-    margin-top: -375px;
-    margin-right: 0;
+    width: 540px;
+    height: 261px;
   }
 
   .u-section-1 .u-group-1 {
-    margin-top: 0;
-  }
-
-  .u-section-1 .u-container-layout-1 {
-    padding-left: 20px;
-    padding-right: 20px;
-  }
-
-  .u-section-1 .u-text-1 {
-    margin-left: 0;
+    width: 540px;
+    min-height: 476px;
     margin-right: 0;
   }
 
+  .u-section-1 .u-image-3 {
+    margin-right: -23px;
+  }
+
+  .u-section-1 .u-text-1 {
+    margin-left: 20px;
+    margin-right: 20px;
+  }
+
   .u-section-1 .u-text-2 {
-    margin-left: 0;
+    margin-left: 20px;
+    margin-right: 20px;
   }
 
   .u-section-1 .u-text-3 {
-    margin-left: 43px;
+    margin-left: 20px;
+    margin-right: 20px;
   }
 
   .u-section-1 .u-text-4 {
-    margin-left: 214px;
+    margin-right: 280px;
+    margin-left: 20px;
   }
 
   .u-section-1 .u-text-5 {
-    margin-left: 142px;
+    margin-top: 0;
+    margin-right: 20px;
+    margin-left: 23px;
   }
 }
 
 @media (max-width: 575px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 851px;
-  }
-
-  .u-section-1 .u-shape-1 {
-    width: 195px;
-    height: 170px;
-    margin-top: 32px;
+    min-height: 1082px;
   }
 
   .u-section-1 .u-image-1 {
-    margin-top: 337px;
-    width: auto;
-    margin-right: initial;
-    margin-left: initial;
+    width: 340px;
+    height: 157px;
   }
 
   .u-section-1 .u-shape-2 {
-    height: 220px;
-    width: 190px;
-    margin-top: -365px;
+    width: 340px;
+    margin-top: -488px;
   }
 
   .u-section-1 .u-image-2 {
-    height: 335px;
     object-position: 46.29% 50%;
-    margin-top: -522px;
+    height: 286px;
     margin-right: initial;
     margin-left: initial;
     width: auto;
   }
 
   .u-section-1 .u-group-1 {
-    width: 301px;
-    margin-top: -104px;
-    margin-right: 0;
-    margin-bottom: 60px;
-  }
-
-  .u-section-1 .u-container-layout-1 {
-    padding-left: 0;
-    padding-right: 0;
+    margin-top: 87px;
+    margin-right: initial;
+    margin-left: initial;
+    width: auto;
   }
 
   .u-section-1 .u-image-3 {
     width: 340px;
-    height: 275px;
-    margin-top: -72px;
-    margin-right: 20px;
+    height: 274px;
+    margin-top: -80px;
+    margin-right: auto;
+    margin-left: -10px;
   }
 
   .u-section-1 .u-text-1 {
     font-size: 1.875rem;
-    margin-top: -96px;
-    margin-left: 20px;
-    margin-right: 20px;
+    width: auto;
+    margin-top: -77px;
+    margin-right: -10px;
   }
 
   .u-section-1 .u-text-2 {
     font-size: 1.5rem;
-    margin-left: 20px;
-    margin-right: 20px;
+    width: auto;
+    margin-top: -294px;
+    margin-right: 125px;
+    margin-left: 42px;
   }
 
   .u-section-1 .u-text-3 {
-    margin-top: -34px;
-    margin-right: auto;
-    margin-left: 32px;
+    width: auto;
+    margin-top: 277px;
+    margin-left: 10px;
+    margin-right: 10px;
   }
 
   .u-section-1 .u-text-4 {
-    margin-top: 9px;
-    margin-right: auto;
-    margin-left: 34px;
+    margin-top: 10px;
+    margin-right: 93px;
+    margin-left: 10px;
   }
 
   .u-section-1 .u-text-5 {
-    margin-right: 0;
-    margin-left: 0;
+    margin-left: 20px;
   }
 } .u-section-2 {
   background-image: none;
@@ -718,13 +661,17 @@
 
   .u-section-2 .u-shape-1 {
     height: 387px;
+    margin-top: 47px;
     margin-right: initial;
     margin-left: initial;
     width: auto;
   }
 
   .u-section-2 .u-group-1 {
-    width: 340px;
+    margin-top: -364px;
+    margin-right: initial;
+    margin-left: initial;
+    width: auto;
   }
 
   .u-section-2 .u-container-layout-1 {
@@ -732,9 +679,13 @@
     padding-right: 20px;
   }
 
+  .u-section-2 .u-text-1 {
+    margin-top: 0;
+  }
+
   .u-section-2 .u-group-2 {
     min-height: 749px;
-    margin-top: 218px;
+    margin-top: 184px;
     width: auto;
     margin-right: initial;
     margin-left: initial;
@@ -768,6 +719,7 @@
   .u-section-2 .u-btn-1 {
     margin-top: -4px;
     margin-left: auto;
+    margin-bottom: 771px;
   }
 } .u-section-3 {
   background-image: none;
